number from to bugfix editable table butto stzles table action title added

--- a/app/assets/stylesheets/backbone_css/editable_tables.css.scss
+++ b/app/assets/stylesheets/backbone_css/editable_tables.css.scss
@@ -102,7 +102,5 @@ span.mini_color_cell {
 }
 
 .editable_table table .btn {
-  padding: 0px;
-  margin: 0px;
-  margin-right: 2px;
+  padding: 0px 3px 0px 3px !important;
 }
