--- a/app/assets/stylesheets/backbone_css/overrides_of_lach_design.css.scss
+++ b/app/assets/stylesheets/backbone_css/overrides_of_lach_design.css.scss
@@ -162,7 +162,9 @@ div.cmf-skinned-select {
     float: none;
 }
 
-
+.dataGrid table tbody tr td .btn {
+  margin: 0px 1px 0px 0px !important;
+}
 
 
 
