--- a/app/views/helpers/editable_table/_build_table_header.html.erb
+++ b/app/views/helpers/editable_table/_build_table_header.html.erb
@@ -43,14 +43,14 @@
                     </div>
                 <% when :number %>
                     <div class="inputs range clearfix small_padding">
-                      <% saved_param = (!settings[:params].blank? && !settings[:params]['date_from'].blank? && !settings[:params]['date_from']["#{col[:table]}.#{col[:name]}"].blank?) ? settings[:params]['date_from']["#{col[:table]}.#{col[:name]}"] : "" %>
+                      <% saved_param = (!settings[:params].blank? && !settings[:params]['number_from'].blank? && !settings[:params]['number_from']["#{col[:table]}.#{col[:name]}"].blank?) ? settings[:params]['number_from']["#{col[:table]}.#{col[:name]}"] : "" %>
 
                       <%= text_field_tag "number_from[#{col[:table]}.#{col[:name]}]", saved_param, {:class => "text first #{settings[:form_id] + '_column_find'}",
                                                                                                     :onchange => "form_submit_watcher('#{settings[:form_id]}')",
                                                                                                     :placeholder => "min.",
                                                                                                     :title => "Hodnota musí být vetší nebo rovna zadané hodnotě"} %>
-                      <% saved_param = (!settings[:params].blank? && !settings[:params]['date_to'].blank? && !settings[:params]['date_to']["#{col[:table]}.#{col[:name]}"].blank?) ? settings[:params]['date_to']["#{col[:table]}.#{col[:name]}"] : "" %>
-                      <%#= label_tag "date_to[#{col[:table]}.#{col[:name]}]", "Do", :class => "datetime_class_label" %>
+                      <% saved_param = (!settings[:params].blank? && !settings[:params]['number_to'].blank? && !settings[:params]['number_to']["#{col[:table]}.#{col[:name]}"].blank?) ? settings[:params]['number_to']["#{col[:table]}.#{col[:name]}"] : "" %>
+                      <%#= label_tag "number_to[#{col[:table]}.#{col[:name]}]", "Do", :class => "datetime_class_label" %>
                       <%= text_field_tag "number_to[#{col[:table]}.#{col[:name]}]", saved_param, {:class => "text #{settings[:form_id] + '_column_find'}",
                                                                                                   :onchange => "form_submit_watcher('#{settings[:form_id]}')",
                                                                                                   :placeholder => "max.",
