pager placement down

--- a/app/views/helpers/_build_table.html.erb
+++ b/app/views/helpers/_build_table.html.erb
@@ -101,7 +101,7 @@
       <%= render :partial => "/helpers/build_table_wrapper", :locals => {:settings => settings} %>
 
       <% if settings[:display_method].blank? %>
-          <div class="<%= settings[:form_id] + '_ajax_pager' %>">
+          <div class="<%= settings[:form_id] + '_ajax_pager' %> parent-filter-paging placement-down">
             <%= render :partial => 'helpers/build_table_pager', :locals => {:settings => settings, :placement => "placement-down"} %>
           </div>
       <% end %>
