--- a/app/views/helpers/editable_table/_build_table_header.html.erb
+++ b/app/views/helpers/editable_table/_build_table_header.html.erb
@@ -83,7 +83,7 @@
     <tr class="sorting_tr" data-row-count-number="row_with_sorting">
       <% if !settings[:checkboxes].blank? && settings[:checkboxes] %>
           <th class="chbox <%= "headcol" if !settings[:static_columns_left_side].blank? %>">
-            <input type="checkbox" title="Označit/odznačit vše na stránce" onclick="CheckboxPool.check_or_uncheck_page(this, '<%= settings[:form_id] %>')" id=""/>
+            <input type="checkbox" title="Označit/odznačit vše na stránce" onclick="CheckboxPool.check_or_uncheck_page(this, '<%= settings[:form_id] %>')" id="checkbox_all_checked_unchecked"/>
           </th>
       <% end %>
       <% if !settings[:row].blank? && !settings[:row][:functions].blank? %>
