--- a/app/views/helpers/editable_table/_build_table_ajax_callback_code.html.erb
+++ b/app/views/helpers/editable_table/_build_table_ajax_callback_code.html.erb
@@ -17,10 +17,10 @@
 
 
     $("#<%= settings[:form_id] %>")
-            .live("ajax:beforeSend", function (evt, xhr, settings) {
+            .bind("ajax:beforeSend", function (evt, xhr, settings) {
                 ladas_loading_show();
             })
-            .live("ajax:complete", function (evt, xhr, status) {
+            .bind("ajax:complete", function (evt, xhr, status) {
                 var parsed_response = jQuery.parseJSON(xhr.responseText);
 
 
