--- a/app/views/helpers/_build_table.html.erb
+++ b/app/views/helpers/_build_table.html.erb
@@ -1,4 +1,4 @@
-<div class="page">
+a<div class="page">
   <%= render :partial => "/helpers/build_table_text_description", :locals => {:settings => settings} %>
 </div>
 <% if settings[:display_method]=="print_by_checkboxes" %>
@@ -22,7 +22,7 @@
         <% if settings[:checkboxes] %>
     <span>Vybráno: <strong>
       <span title="Počet označených řádků na všech stránkách" id="<%= settings[:form_id]+ "_active_checkboxes_count" %>">
-                                         <%= !settings[:params]["checkbox_pool"].blank? ? settings[:params]["checkbox_pool"].split(",").count : 0 %>
+                                         <%= !settings[:params][:checkbox_pool].blank? ? settings[:params][:checkbox_pool].split(",").count : 0 %>
                                        </span>
     </strong>
     </span>
