special functions with form clonig, selectboxes values fixed

--- a/app/views/helpers/_build_table.html.erb
+++ b/app/views/helpers/_build_table.html.erb
@@ -34,6 +34,15 @@ a<div class="page">
                     function submit_in_new_window(form_id, spec_attr_name, spec_attr_value) {
                         var form_original = $("#" + form_id);
 
+                          // setting selected options right to the code, otherwise it wont be cloned
+                        form_original.find("select option:not(:selected)").each( function (){
+                              $(this).removeAttr("selected");
+                        });
+
+                        form_original.find("select option:selected").each( function (){
+                           $(this).attr("selected", "selected");
+                        });
+
                         // create new form by cloning without events
                         var form = form_original.clone(false)
 
