multiselect box bug, error when no multiselect boxes on the page

--- a/app/views/helpers/_build_table.html.erb
+++ b/app/views/helpers/_build_table.html.erb
@@ -1,4 +1,4 @@
-a<div class="page">
+<div class="page">
   <%= render :partial => "/helpers/build_table_text_description", :locals => {:settings => settings} %>
 </div>
 <% if settings[:display_method]=="print_by_checkboxes" %>
